Padding fixed
- Fixed padding on navbar for --lg-only.
- Fixed some overlapping media queries.
- Set the login button to always show max-content.
- Cheated margin on .user-menu to avoid overflowing in navbar.

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -293,8 +293,12 @@ body:not(.focus) #scroller {
         width: 10rem;
     }
 
-    @media (--lg-up) {
+    @media (--xl-up) {
         margin-inline-end: 4rem;
+    }
+
+    @media (--lg-only) {
+        margin-inline-end: 1rem;
     }
 
     &,
